# py-doi2bib

./: .gitignore  README.md  pyproject.toml
src/pydoi2bib/: __init__.py  doi2bib.py
